# ib-practica12-oop-gtests-exercism-gcruz174

complejos/: CMakeLists.txt  complejos.Doxyfile
complejos/doc/html/: globals.html  globals_vars.html  graph_legend.html  index.html
complejos/src/: complejo.cc  complejo.h  complejos.cc
complejos2/doc/html/: globals.html  globals_vars.html  graph_legend.html  index.html
complejos2/doc/latex/: refman.tex
complejos2/src/: complejo.cc  complejo.h  complejos.cc
complejos2/test/: test_complejo.cc
fechas/: CMakeLists.txt  fechas.Doxyfile
fechas/doc/html/: graph_legend.html  index.html
fechas/doc/latex/: refman.tex
fechas/src/: fecha.cc  fecha.h  fechas.cc  tools.cc  tools.h
fechas/test/: test_fecha.cc
